--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="#sobre">Sobre</a>
       <a href="especialidades.html">Especializações</a>
-      <a href="#contato">Contato</a>
+      <a href="#contatos">Contato</a>
     </nav>
   </header>
 
