Update de correção
Adiciona o link correto das áreas de especialização

--- a/especialidades.html
+++ b/especialidades.html
@@ -24,7 +24,7 @@
       <div class="especialidades info">
         <a href="#ortopedia">Ortopedia</a>
         <a href="#pediatria">Pediatria</a>
-        <a href="#geriatia">Geriatria</a>
+        <a href="#geriatria">Geriatria</a>
         <a href="#psicologia">psicologia</a>
         <a href="#fisioterapia">Fisioterapia</a>
       </div>
